lazy load to logos
lazy load to logos

--- a/index.html
+++ b/index.html
@@ -825,13 +825,19 @@
 If you find a template that really seems like something you could use, it’s probably the best way to get you started. </p>
               <div class="row row-grid">
                 <div class="col-3 my-1 mt-5" data-aos="zoom-in" data-aos-delay="500">
-                  <img alt="image" class="img-fluid   logo" src="assets/img/logos/ph.png">
+                  <img alt="image" class="img-fluid logo lazy"
+                  src="assets/img/150x100.png"
+                  data-src="assets/img/logos/ph.png">
                 </div>
                 <div class="col-3 my-1 mt-5" data-aos="fade-right" data-aos-delay="700">
-                  <img alt="image" class="img-fluid   logo" src="assets/img/logos/angel.png">
+                  <img alt="image" class="img-fluid logolazy"
+                  src="assets/img/150x100.png"
+                  data-src="assets/img/logos/angel.png">
                 </div>
                 <div class="col-3 my-1 mt-5" data-aos="fade-right" data-aos-delay="900">
-                  <img alt="image" class="img-fluid   logo" src="assets/img/logos/tnw.png">
+                  <img alt="image" class="img-fluid logolazy"
+                  src="assets/img/150x100.png"
+                  data-src="assets/img/logos/tnw.png">
                 </div>
 
               </div>
@@ -840,25 +846,7 @@ If you find a template that really seems like something you could use, it’s pr
           </div>
         </div>
       </section>
-    <!--  <section class="pt-5 pb-5 bg-dark d-flex align-items-center" style="min-height: 75vh; background-image: url(&quot;https://images.unsplash.com/photo-1497091071254-cc9b2ba7c48a?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1506&amp;q=80&quot;); background-size: cover;">
-        <div class="container h-100">
-          <div class="row justify-content-end align-items-center">
-            <div class="col-12  col-md-7  ">
-              <h3 class="display-4 mb-3 font-weight-bold text-white">Get notified of exclusive Freebies and Deals</h3>
-              <p class="text-h3 text-white">Get Design Freebies and Deals for web professionals to your inbox.</p>
-              <form class="input-group mb-3 w-75">
-                <input type="text" class="form-control form-control-lg" placeholder="Email" aria-label="Email" aria-describedby="basic-addon2">
-                <div class="input-group-append">
-                  <button class="btn btn-primary" type="button">Subscribe</button>
-                </div>
-              </form>
-              <p class="small text-light">Your email address is safe with us. We never share your email address.</p>
-            </div>
-          </div>
-        </div>
-        <div class=" " style=" ">
-        </div>
-      </section>-->
+
 
       <section class="mb-0 mt-0">
         <div class="footer  ">
