change img logos

--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                             <p class="lead  mt-2">"Good design is like a refrigerator—when it works, no one notices, but when it doesn’t, it sure stinks."</p>
                             <div class="mt-3 d-flex align-items-center pt-2">
                               <div class="mr-3">
-                                <img class="d-block img-fluid rounded-circle" src="https://via.placeholder.com/40x40/5fa9f8/ffffff " srcset="https://via.placeholder.com/120x120/5fa9f8/ffffff 2x" alt="user">
+                                <img class="d-block img-fluid rounded-circle" src="assets/img/40x40.png" srcset="assets/img/40x40.png 2x" alt="user">
                               </div>
                               <div class="d-block">
                                 <p class="mb-0">–Irene Au</p>
@@ -774,7 +774,7 @@
                             <p class="lead  mt-2">"Digital design is like painting, except the paint never dries."</p>
                             <div class="mt-3 d-flex align-items-center pt-2">
                               <div class="mr-3">
-                                <img class="d-block img-fluid rounded-circle" src="https://via.placeholder.com/40x40/5fa9f8/ffffff " srcset="https://via.placeholder.com/120x120/5fa9f8/ffffff 2x" alt="user">
+                                <img class="d-block img-fluid rounded-circle" src="https://via.placeholder.com/40x40/5fa9f8/ffffff " srcset="assets/img/40x40.png 2x" alt="user">
                               </div>
                               <div class="d-block">
                                 <p class="mb-0">-Neville Brody</p>
@@ -803,7 +803,7 @@
                             <p class="lead  mt-2">"The alternative to good design is always bad design. There is no such thing as no design."</p>
                             <div class="mt-3 d-flex align-items-center pt-2">
                               <div class="mr-3">
-                                <img class="d-block img-fluid rounded-circle" src="https://via.placeholder.com/40x40/5fa9f8/ffffff " srcset="https://via.placeholder.com/120x120/5fa9f8/ffffff 2x" alt="user">
+                                <img class="d-block img-fluid rounded-circle" src="https://via.placeholder.com/40x40/5fa9f8/ffffff " srcset="assets/img/40x40.png 2x" alt="user">
                               </div>
                               <div class="d-block">
                                 <p class="mb-0"> –Adam Judge</p>
@@ -826,17 +826,17 @@ If you find a template that really seems like something you could use, it’s pr
               <div class="row row-grid">
                 <div class="col-3 my-1 mt-5" data-aos="zoom-in" data-aos-delay="500">
                   <img alt="image" class="img-fluid logo lazy"
-                  src="assets/img/150x100.png"
+                  src="assets/img/40x40.png"
                   data-src="assets/img/logos/ph.png">
                 </div>
                 <div class="col-3 my-1 mt-5" data-aos="fade-right" data-aos-delay="700">
                   <img alt="image" class="img-fluid logolazy"
-                  src="assets/img/150x100.png"
+                  src="assets/img/40x40.png"
                   data-src="assets/img/logos/angel.png">
                 </div>
                 <div class="col-3 my-1 mt-5" data-aos="fade-right" data-aos-delay="900">
                   <img alt="image" class="img-fluid logolazy"
-                  src="assets/img/150x100.png"
+                  src="assets/img/40x40.png"
                   data-src="assets/img/logos/tnw.png">
                 </div>
 
