--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@ If you find a template that really seems like something you could use, it’s pr
       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
       <!--<script src="assets/js/app.js"></script>-->
-      <script src="https://gumroad.com/js/gumroad.js"></script>
+      <script src="https://gumroad.com/js/gumroad.js" async></script>
     <!--  <script>
         //hero header animation
         const elems = document.querySelectorAll('.laya-vr');
