--- a/index.html
+++ b/index.html
@@ -96,30 +96,13 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav3">
-
-              <!--<li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>-->
-
-                <a class="font-weight-bold btn navbar-btn text-danger" target="_blank" href="https://blueprintsapp.launchaco.com/">Try DIY Generator</a>
-
-              <!--<li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Team</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>-->
-
-
+            <a class="font-weight-bold btn navbar-btn text-danger" target="_blank" href="https://blueprintsapp.launchaco.com/">Try DIY Generator</a>
           </div>
         </div>
       </nav>
       <section class="pt-5 pb-5 bg-white position-relative" style="min-height:100vh;">
         <div class="layer-wrapper laya-vr layer-1">
-        <svg  id="animLayer1" class="scene" width="1200" height="1200" preserveAspectRatio="xMinYMid slice" viewBox="0 0 1200 1200" data-aos="fade-left" data-aos-delay="100">
+        <svg  id="animLayer1" class="scene" width="1200" height="1200" preserveAspectRatio="xMinYMid slice" viewBox="0 0 1200 1200">
         					<defs>
         						<linearGradient id="gradient-1" x1="0%" y1="0%" x2="100%" y2="100%">
         							<stop stop-color="#f19872"></stop>
@@ -162,19 +145,10 @@
             <div class="col-md-5 text-center text-lg-left mb-5 mb-lg-0 order-2 order-md-1">
               <h1 class="display-4   mt-5 mt-md-2 font-weight-light"><span  class="d-block w-100 font-weight-light">Website Blueprints</span>
                 <span  class="d-block w-100 font-weight-bold text-primary text-glow">for Startups & Makers</span></h1>
-              <div class="my-4" >
+              <div class="my-4">
                 <p class="lead  ">If your startup is in the planning of building a website, or if you’re looking for a refresh, this helps to start at some of the best examples of startup websites for cues.</p>
               </div>
-              <!--<div class="d-flex justify-content-center justify-content-lg-start" >
-                <div class="d-flex mr-2">
-                  <i class="fas fa-star   text-warning m-1" data-aos="zoom-in" data-aos-delay="2000"></i>
-                  <i class="fas fa-star   text-warning m-1" data-aos="zoom-in" data-aos-delay="2050"></i>
-                  <i class="fas fa-star   text-warning m-1" data-aos="zoom-in" data-aos-delay="2100"></i>
-                  <i class="fas fa-star   text-warning m-1" data-aos="zoom-in" data-aos-delay="2150"></i>
-                  <i class="fas fa-star   text-muted m-1" data-aos="zoom-in" data-aos-delay="2200"></i>
-                </div>
-                <span class=" " data-aos="fade-right" data-aos-delay="1900">(Average score: 4.9/5)</span>
-              </div>-->
+
               <div class=" d-flex mt-5 mb-1 justify-content-start">
                   <p class="lead font-weight-bold">  <span class="stars ml-2">
                         <span class="text-warning px-0"><i class="fa fa-star"></i></span>
@@ -190,14 +164,12 @@
                 <div class="col-md-6">
                       <a href="#downloadAll" class="btn btn-primary  btn-block btn-lg ml-md-3 ml-md-auto mt-5">DOWNLOAD</a>
                 </div>
-                <!--<div class="col-md-6">
-                    <a href="#" class="btn btn-outline-primary  btn-block  btn-lg ml-md-3 ml-md-auto mt-md-5 mt-3" data-aos="fade-right" data-aos-delay="1500">SIGN UP</a>
-                </div>-->
+
               </div>
             </div>
             <div class="col-md-6 order-1 order-md-2">
               <div class="layer-img-wrapper laya-vr layer-2 ">
-                <img  src="assets/img/undraw_noted_pc9f.svg" alt="" class=" img-fluid d-block my-auto" data-aos="zoom-in" data-aos-delay="100">
+                <img  src="assets/img/undraw_noted_pc9f.svg" alt="" class=" img-fluid d-block my-auto">
               </div>
             </div>
           </div>
@@ -774,7 +746,7 @@
                             <p class="lead  mt-2">"Digital design is like painting, except the paint never dries."</p>
                             <div class="mt-3 d-flex align-items-center pt-2">
                               <div class="mr-3">
-                                <img class="d-block img-fluid rounded-circle" src="https://via.placeholder.com/40x40/5fa9f8/ffffff " srcset="assets/img/40x40.png 2x" alt="user">
+                                <img class="d-block img-fluid rounded-circle" src="assets/img/40x40.png " srcset="assets/img/40x40.png 2x" alt="user">
                               </div>
                               <div class="d-block">
                                 <p class="mb-0">-Neville Brody</p>
@@ -803,7 +775,7 @@
                             <p class="lead  mt-2">"The alternative to good design is always bad design. There is no such thing as no design."</p>
                             <div class="mt-3 d-flex align-items-center pt-2">
                               <div class="mr-3">
-                                <img class="d-block img-fluid rounded-circle" src="https://via.placeholder.com/40x40/5fa9f8/ffffff " srcset="assets/img/40x40.png 2x" alt="user">
+                                <img class="d-block img-fluid rounded-circle" src="assets/img/40x40.png " srcset="assets/img/40x40.png 2x" alt="user">
                               </div>
                               <div class="d-block">
                                 <p class="mb-0"> –Adam Judge</p>
@@ -846,8 +818,6 @@ If you find a template that really seems like something you could use, it’s pr
           </div>
         </div>
       </section>
-
-
       <section class="mb-0 mt-0">
         <div class="footer  ">
           <div class="   bg-dark pt-5 pb-5">
@@ -877,91 +847,7 @@ If you find a template that really seems like something you could use, it’s pr
                   </div>
                 </div>
               </div>
-            <!--  <div class="row">
-                <div class="col-xs-6 col-sm-3">
-                  <a href="#">
-                    <svg class="d-block mb-4" width="36" height="36" viewBox="0 0 612 612" xmlns="http://www.w3.org/2000/svg" focusable="false">
-                      <path fill="currentColor" d="M510 8a94.3 94.3 0 0 1 94 94v408a94.3 94.3 0 0 1-94 94H102a94.3 94.3 0 0 1-94-94V102a94.3 94.3 0 0 1 94-94h408m0-8H102C45.9 0 0 45.9 0 102v408c0 56.1 45.9 102 102 102h408c56.1 0 102-45.9 102-102V102C612 45.9 566.1 0 510 0z"></path>
-                      <path fill="currentColor" d="M196.77 471.5V154.43h124.15c54.27 0 91 31.64 91 79.1 0 33-24.17 63.72-54.71 69.21v1.76c43.07 5.49 70.75 35.82 70.75 78 0 55.81-40 89-107.45 89zm39.55-180.4h63.28c46.8 0 72.29-18.68 72.29-53 0-31.42-21.53-48.78-60-48.78h-75.57zm78.22 145.46c47.68 0 72.73-19.34 72.73-56s-25.93-55.37-76.46-55.37h-74.49v111.4z"></path>
-                    </svg>
-                  </a>
-                  <address class="color-light-20">
-                    1600 Amphitheatre Parkway
-                    <br> Mountain View, CA 94043
-                  </address>
-                  <ul class="list-unstyled list-light">
-                    <li>
-                      <a href="#">Disclaimer</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-xs-6 col-sm-3">
-                  <h4 class="my-2">Product</h4>
-                  <ul class="list-unstyled list-light">
-                    <li>
-                      <a href="#">Pricing</a>
-                    </li>
-                    <li>
-                      <a href="#">Features</a>
-                    </li>
-                    <li>
-                      <a href="#">Customers</a>
-                    </li>
-                    <li>
-                      <a href="#">Store</a>
-                    </li>
-                  </ul>
-                </div>
-                <br style="clear:both" class="hidden-sm-up">
-                <div class="col-xs-6 col-sm-3">
-                  <h4 class="my-2">Company</h4>
-                  <ul class="list-unstyled list-light">
-                    <li>
-                      <a href="#">About Us</a>
-                    </li>
-                    <li>
-                      <a href="#">Blog</a>
-                    </li>
-                    <li>
-                      <a href="#">Careers</a>
-                    </li>
-                    <li>
-                      <a href="#">Press</a>
-                    </li>
-                    <li>
-                      <a href="#">Events</a>
-                    </li>
-                    <li>
-                      <a href="#">Contact</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-xs-6 col-sm-3">
-                  <h4 class="my-2">Connect</h4>
-                  <ul class="list-unstyled list-light">
-                    <li>
-                      <a href="#">Support</a>
-                    </li>
-                    <li>
-                      <a href="#">Social</a>
-                    </li>
-                    <li>
-                      <a href="#">Community</a>
-                    </li>
-                  </ul>
-                  <p class="color-light mt-2">Stay up-to-date!</p>
-                  <form>
-                    <div class="form-group">
-                      <div class="input-group mb-3">
-                        <input type="text" class="form-control form-control-sm" placeholder="Email" aria-label="Email" aria-describedby="basic-addon2">
-                        <div class="input-group-append">
-                          <button class="btn btn-primary btn-sm" type="button">Ok</button>
-                        </div>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-              </div>-->
+
               <hr>
               <div class="row f-flex justify-content-center" style="">
                 <div class="col text-center  text-secondary my-1">
