--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <link rel="stylesheet" href="assets/css/app.css ">
       <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">-->
       <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,400,600,700&display=swap" rel="stylesheet">
-      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+      <!--<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">-->
       <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
       <link rel="stylesheet" href="assets/css/style.css">
       <style>
@@ -687,7 +687,7 @@
         <div class="container  pt-5 pb-5 mt-5 mb-5 ">
           <div class="row d-flex justify-content-between">
             <div class="col-md-5 order-2 order-md-1 mt-md-0 mt-5 pt-5 pt-md-1" >
-              <div class="svg-wrapper" data-aos="fade-in" data-aos-delay="500" >
+              <div class="svg-wrapper" >
                   <svg width="600" height="600" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                     <linearGradient id="MyGradient2">
                       <stop stop-color="#0947db"></stop>
@@ -699,7 +699,7 @@
                       </g>
                     </svg>
                 </div>
-                <div class="slider-testimonials-1 position-relative card mb-3 mt-5  " data-aos="fade-left" data-aos-delay="300">
+                <div class="slider-testimonials-1 position-relative card mb-3 mt-5" >
                   <div class="slik-item">
                     <div class="container-fluid">
                       <div class="row   justify-content-center d-flex  ">
@@ -792,21 +792,21 @@
                   <div class="slider-nav"></div>
             </div>
             <div class="col-md-6 order-1 order-md-2">
-              <h3 class=" display-4 " ><span  class="d-block w-100" data-aos="fade-left" data-aos-delay="500">The Future of your </span> <span  class="d-block w-100" data-aos="fade-right" data-aos-delay="550">Startup is Now</span></h3>
-              <p class="lead mt-4" data-aos="fade-up" data-aos-delay="300">Templates are 100% finalized HTML/CSS pages that often look very nice.
+              <h3 class=" display-4 " ><span  class="d-block w-100">The Future of your </span> <span  class="d-block w-100">Startup is Now</span></h3>
+              <p class="lead mt-4" >Templates are 100% finalized HTML/CSS pages that often look very nice.
 If you find a template that really seems like something you could use, it’s probably the best way to get you started. </p>
               <div class="row row-grid">
-                <div class="col-3 my-1 mt-5" data-aos="zoom-in" data-aos-delay="500">
+                <div class="col-3 my-1 mt-5">
                   <img alt="image" class="img-fluid logo lazy"
                   src="assets/img/40x40.png"
                   data-src="assets/img/logos/ph.png">
                 </div>
-                <div class="col-3 my-1 mt-5" data-aos="fade-right" data-aos-delay="700">
+                <div class="col-3 my-1 mt-5">
                   <img alt="image" class="img-fluid logolazy"
                   src="assets/img/40x40.png"
                   data-src="assets/img/logos/angel.png">
                 </div>
-                <div class="col-3 my-1 mt-5" data-aos="fade-right" data-aos-delay="900">
+                <div class="col-3 my-1 mt-5" >
                   <img alt="image" class="img-fluid logolazy"
                   src="assets/img/40x40.png"
                   data-src="assets/img/logos/tnw.png">
@@ -919,7 +919,7 @@ If you find a template that really seems like something you could use, it’s pr
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js"></script>
-      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <!--<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>-->
       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
       <!--<script src="assets/js/app.js"></script>-->
       <script src="https://gumroad.com/js/gumroad.js" async></script>
