--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <link rel="icon" href="assets/img/icons/anger-emote.png">
       <link rel="stylesheet" href="assets/css/app.css ">
       <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">-->
-      <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,400,600,700&display=auto" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,400,600,700&display=swap" rel="stylesheet">
       <!--<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">-->
       <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
       <link rel="stylesheet" href="assets/css/style.css">
