--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@ If you find a template that really seems like something you could use, it’s pr
               <hr>
               <div class="row f-flex justify-content-center" style="">
                 <div class="col text-center  text-secondary my-1">
-                  <p class="mt-2   "> © Copyright 2019 • All Rights Reserved  <a href="https://market.bootstraptor.com" target="_blank">Bootstraptor.com</a> | Illustrations by <a href="https://undraw.co/illustrations" target="_blank">Undraw</a>
+                  <p class="mt-2   ">MakersThemes © Copyright 2019 • All Rights Reserved  <a href="https://market.bootstraptor.com" target="_blank">Bootstraptor.com</a> | Illustrations by <span class="text-primary">Undraw</span>
                     <!--<a class=" " href="#">Disclaimer</a> |
                     <a class=" " href="#">Contact</a>-->
                   </p>
