add provenly widget

--- a/index-maker-themes.html
+++ b/index-maker-themes.html
@@ -52,14 +52,14 @@
 
       <!-- Plugins -->
       <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!--  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143393542-1"></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143393542-1"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'UA-143393542-1');
-      </script>-->
+      </script>
 
     </head>
     <body>
@@ -90,13 +90,13 @@
       <nav id="navbar-main" class="navbar navbar-light bg-transparent  navbar-expand-md fixed-top" >
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="assets/img/icons/anger-emote.png" class="img-fluid img-logo" alt="Maker Themes Logo"> <span class="font-weight-bold">Bootstrap</span><span class="font-weight-bold text-primary">THEMES</span>
+            <img src="assets/img/icons/anger-emote.png" class="img-fluid img-logo" alt="Maker Themes Logo"> <span class="font-weight-bold">Makers</span><span class="font-weight-bold text-primary">THEMES v.1.0.</span>
           </a>
           <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarNav3" aria-controls="navbarNav3" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav3">
-            <a class="font-weight-bold btn btn-danger navbar-btn ml-auto " target="_blank" href="https://demo.bootstraptor.com/blueprints/">Try DIY Generator</a>
+            <a class="font-weight-bold btn navbar-btn text-danger" target="_blank" href="https://blueprintsapp.launchaco.com/">Try DIY Generator</a>
           </div>
         </div>
       </nav>
@@ -143,10 +143,10 @@
         <div class="container-fluid pt-5 pb-5 position-relative">
           <div class="row d-flex justify-content-between  align-items-center">
             <div class="col-md-5 text-center text-lg-left mb-5 mb-lg-0 order-2 order-md-1">
-              <h1 class="display-5   mt-5 mt-md-2 font-weight-light"><span  class="d-block w-100 font-weight-light">Free Bootstrap Templates</span>
+              <h1 class="display-4   mt-5 mt-md-2 font-weight-light"><span  class="d-block w-100 font-weight-light">Website Blueprints</span>
                 <span  class="d-block w-100 font-weight-bold text-primary text-glow">for Startups & Makers</span></h1>
               <div class="my-4">
-                <p class="lead  ">If your startup is in the planning of building a website, or if you’re looking for a refresh, this free Bootstrap templates helps to start at some of the best examples.</p>
+                <p class="lead  ">If your startup is in the planning of building a website, or if you’re looking for a refresh, this helps to start at some of the best examples of startup websites for cues.</p>
               </div>
 
               <div class=" d-flex mt-5 mb-1 justify-content-start">
@@ -157,7 +157,7 @@
                         <span class="text-warning px-0"><i class="fa fa-star"></i></span>
                         <span class="text-warning px-0"><i class="fa fa-star"></i></span>
                       </span>
-                      <span id="value" class="text-primary font-weight-bold ml-2">3624</span> times downloaded the last month
+                      <span id="value" class="text-primary font-weight-bold ml-2">2024</span> times downloaded the last month
                     </p>
               </div>
               <div class="row d-flex justify-content-between  align-items-center mt-2">
@@ -167,9 +167,9 @@
 
               </div>
             </div>
-            <div class="col-md-7 order-1 order-md-2">
+            <div class="col-md-6 order-1 order-md-2">
               <div class="layer-img-wrapper laya-vr layer-2 ">
-                <img  src="assets/img/undraw_startup_life_2du2.svg" alt="" class=" img-fluid d-block my-auto">
+                <img  src="assets/img/undraw_noted_pc9f.svg" alt="" class=" img-fluid d-block my-auto">
               </div>
             </div>
           </div>
@@ -183,7 +183,7 @@
             <div class="col col-md-8 text-center mt-5">
               <h2 class="fon-weight-bold">🦸‍ Startup Website Blueprints</h2>
               <p class="text-h3">If you are not 100% fluent with HTML/CSS, these boilerplates will give you a set of layouts and components to get you started.
-                Make by @Bootstraptor with <3 & <a href="https://demo.bootstraptor.com/blueprints/" targe="_blank">Blueprints App</a>.</p>
+                Make by @Bootstraptor with <3 & <a href="https://blueprintsapp.launchaco.com/" targe="_blank">Blueprints App</a>.</p>
             </div>
           </div>
         </div>
@@ -840,7 +840,7 @@ If you find a template that really seems like something you could use, it’s pr
                     </div>
                     <div class="position-relative d-flex flex-column py-md-2 flex-md-row justify-content-between align-items-center">
                       <div class="h1 text-center mb-md-0">Start building beautiful websites</div>
-                      <a href="https://demo.bootstraptor.com/blueprints/" class="shadow btn btn-lg btn-light py-md-3 px-md-5 text-danger font-weight-bold ">
+                      <a href="https://blueprintsapp.launchaco.com/" class="shadow btn btn-lg btn-light py-md-3 px-md-5 text-danger font-weight-bold ">
                         GET WEBSITE GENERATOR NOW >
                       </a>
                     </div>
@@ -861,7 +861,7 @@ If you find a template that really seems like something you could use, it’s pr
           </div>
         </div>
       </section>
-      <div class="badge bg-primary badge-cred"><a href="https://demo.bootstraptor.com/blueprints/" target="_blank" class="text-white">Made w/ Blueprints</a></div>
+      <div class="badge bg-primary badge-cred"><a href="https://blueprintsapp.launchaco.com/" target="_blank" class="text-white">Made w/ Blueprints</a></div>
 
 
       <script>
@@ -944,22 +944,6 @@ If you find a template that really seems like something you could use, it’s pr
        sc.async=true;
        sc.src='assets/js/app.js?v' + Math.random();
        s.parentNode.insertBefore(sc,s);
-      </script>
-
-      <script>
-        color = '__provenly-light-style';
-        position = '__provenly-position-left';
-        radius = '__provenly-radius-rounded';
-        delay = '2000';
-        sheetUrl = 'https://docs.google.com/spreadsheets/d/1jakD29xYXFmeHJWI6HyVhGOf-y2IMoOwwI5Us0W1CCs/edit?usp=sharing';
-        iconImgUrl = 'default';
-        geoAPI =  true;
-        var s=document.getElementsByTagName('script')[0];
-        var sc=document.createElement('script');
-        sc.type='text/javascript';
-        sc.async=true;
-        sc.src='https://proven.ly/api/provenly-widget.js?v' + Math.random();
-        s.parentNode.insertBefore(sc,s);
       </script>
     </body>
 </html>
